@@ -29,7 +29,7 @@ public class ProgamerMapper {
         if (progamerDto.getTeams() != null) {
             List<Long> teamIds = Arrays.stream(progamerDto.getTeams().split(","))
                     .map(Long::parseLong)
-                    .collect(Collectors.toList());
+                    .toList();
 
             // 데이터베이스에서 팀 ID로 Team 엔티티를 가져옴
             teams = teamIds.stream()
@@ -38,18 +38,6 @@ public class ProgamerMapper {
                     .collect(Collectors.toList());
         }
         progamer.setTeams(teams);
-
-        // teams가 비어있지 않은지 확인 후 가장 마지막 팀 가져오기
-        if (!teams.isEmpty()) {
-            Team latestTeam = teams.get(teams.size() - 1);  // 가장 마지막 팀을 가져옴
-            log.info("Latest team: " + latestTeam.getName());  // 팀 이름 로그로 확인
-
-            progamer.setLatestTeam(latestTeam.getId());  // latestTeam에 저장
-            progamer.setLatestLeague(String.valueOf(latestTeam.getLeague()));  // 리그 저장
-        } else {
-            log.warn("No teams found for progamer: " + progamerDto.getName());
-            // teams가 없을 경우에 대한 기본 처리 (필요에 따라 처리)
-        }
 
         return progamer;
     }
